minor fixes; dropdown animations; starting other components
-removed scrollbar (temporary)
-added animations to hover menu
-started a body component

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -6,11 +6,20 @@
     padding:0;
     font-size: 15px;
     font-family: 'Poppins', sans-serif;
+}
+
+html {
+  scrollbar-width: none;
+}
+
+body{
+  background-image:  url("../images/PrintFinal.png");
+  background-color: rgb(255, 255, 255);
+  a{
+     text-decoration: none;
   }
-  body{
-    //background-image:  url("../images/printFinal.png");
-    background-color: rgb(255, 255, 255);
-    a{
-      text-decoration: none;
-    }
-  }
+}
+.flexAll{
+  display: flex;
+  justify-content: center;
+}
